--- a/css/style.css
+++ b/css/style.css
@@ -104,5 +104,8 @@ body {
   .cat-button {
     padding: 5px 25px;
   }
+  .h1 {
+    font-size: 30px;
+  }
 }
 /*# sourceMappingURL=style.css.map */
